include/sysworxx_io.h

typedef uint8_t IoAnalogMode;
typedef uint8_t IoBool;
typedef uint8_t IoInputTrigger;
typedef uint32_t IoResult;
typedef uint8_t IoTmpMode;
typedef uint8_t IoTmpSensorType;
/**
 * @brief Hardware information structure
 *
 * This structure will be filled by IoGetHardwareInfo. It contains the
 * revision information as well as the channel counts for the different
 * peripherals.
 */
struct IoHwInfo
{
    /**
     * The PCB revision number
     */
    uint8_t m_uPcbRevision;
    /**
     * Number of digital inputs
     */
    uint8_t m_uDiChannels;
    /**
     * Number of digital outputs
     */
    uint8_t m_uDoChannels;
    /**
     * Number of analog inputs
     */
    uint8_t m_uAiChannels;
    /**
     * Number of analog outputs
     */
    uint8_t m_uAoChannels;
    /**
     * Number of temperature inputs
     */
    uint8_t m_uTmpChannels;
    /**
     * Number of counter channels
     */
    uint8_t m_uCntChannels;
    /**
     * Number of A/B decoder channels
     */
    uint8_t m_uEncChannels;
    /**
     * Number of PWM channels
     */
    uint8_t m_uPwmChannels;
    /**
     * Number of real digital inputs (legacy)
     */
    uint8_t m_uLegacyDiChannels;
    /**
     * Number of real digital outputs (legacy)
     */
    uint8_t m_uLegacyDoChannels;
    /**
     * Number of relay outputs (legacy)
     */
    uint8_t m_uLegacyRelayChannels;
    /**
     * Offset of relay outputs in DO channels (legacy)
     */
    uint8_t m_uLegacyRelayOffset;
};
/**
 * Callback function for changes on digital inputs
 */
typedef void (*IoInputCallback)(uint8_t, IoBool);
/**
 * @brief Initializes the I/O driver.
 * @note This function has to be called before any of the other API
 *       functions can be used.
 *
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoInit(void);
/**
 * @brief De-initialization of the I/O driver
 *
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoShutdown(void);
/**
 * @brief Get the version of the I/O driver
 *
 * @param puMajor_p Pointer to the resulting major part of the version number
 * @param puMinor_p Pointer to the resulting minor part of the version number
 * @return IoResult Driver result code of type IoResult
 *
 * # Safety
 *
 * `puMajor_p` must be a valid pointer
 * `puMinor_p` must be a valid pointer
 */
IoResult IoGetVersion(uint8_t *puMajor_p, uint8_t *puMinor_p);
/**
 * @brief Get the tickcount of the system in milliseconds
 *
 * This is a increasing time value starting at an unknown point in
 * time.
 *
 * @param puTickCount_p Pointer to the resulting timestamp value
 * @return IoResult Driver result code of type IoResult
 *
 * # Safety
 *
 * `puTickCount_p` must be a valid pointer
 */
IoResult IoGetTickCount(uint32_t *puTickCount_p);
/**
 * @brief Enable the systems watchdog
 *
 * @param fMonitorOnly_p Enable monitoring only mode. If the watchdog was not
 *        serviced in time, an error will be reported by the return value of
 *        IoServiceWatchdog().
 *
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoEnableWatchdog(IoBool fMonitorOnly_p);
/**
 * @brief Service the system watchdog
 *
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoServiceWatchdog(void);
/**
 * @brief Get information about device revision and available I/O channels
 *
 * @param pHwInfo_p Destination structure with the resulting information
 * @return IoResult Driver result code of type IoResult
 *
 * # Safety
 *
 * `pHwInfo_p` must point be a valid pointer
 */
IoResult IoGetHardwareInfo(struct IoHwInfo *pHwInfo_p);
/**
 * @brief Set the RUN LED
 *
 * @param fState_p The state to set
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoSetRunLed(IoBool fState_p);
/**
 * @brief Set the ERROR LED
 *
 * @param fState_p The state to set
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoSetErrLed(IoBool fState_p);
/**
 * @brief Get device interface information
 *
 * @param sPath_p Path to file
 * @return IoResult Driver result code of type IoResult
 *
 * # Safety
 *
 * `sPath_p` must be a valid pointer
 */
IoResult IoGetJson(const char *sPath_p);
/**
 * @brief Get value of the RUN switch
 *
 * @param pfRunSwitch_p Pointer to the value destination
 * @return IoResult Driver result code of type IoResult
 *
 * # Safety
 *
 * `pfRunSwitch_p` must be a valid pointer
 */
IoResult IoGetRunSwitch(IoBool *pfRunSwitch_p);
/**
 * @brief Get value of the config switch
 *
 * @param pfConfig_p Pointer to the value destination
 * @return IoResult Driver result code of type IoResult
 *
 * # Safety
 *
 * `pfConfig_p` must be a valid pointer
 */
IoResult IoGetConfigEnabled(IoBool *pfConfig_p);
/**
 * @brief Set the value of a digital output
 *
 * @param uChannel_p The channel of the digital output
 * @param fEnable_p The value to set
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoSetOutput(uint8_t uChannel_p, IoBool fEnable_p);
/**
 * @brief Get the value of a digital input
 *
 * @param uChannel_p The channel of the digital input
 * @param pfState_p Pointer to the state destination
 * @return IoResult Driver result code of type IoResult
 *
 * # Safety
 *
 * `pfState_p` must be a valid pointer
 */
IoResult IoGetInput(uint8_t uChannel_p, IoBool *pfState_p);
/**
 * @brief Register a callback to signal changes on an digital input
 *
 * @param uChannel_p The channel of the digital input
 * @param pfnCallback_p The callback function to register of type #IoInputCallback
 * @param uInterruptTrigger_p Set the kind of trigger for the input #IoInputTrigger
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoRegisterInputCallback(uint8_t uChannel_p,
                                 IoInputCallback pfnCallback_p,
                                 IoInputTrigger uInterruptTrigger_p);
/**
 * @brief Un-register / disable interrupt handling for a digital input
 *
 * @param uChannel_p Analogous to #IoRegisterInputCallback
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoUnregisterInputCallback(uint8_t uChannel_p);
/**
 * @brief Get the value of an ADC channel
 *
 * @param uChannel_p The channel to get
 * @param puAdcValue_p Pointer to the value destination
 * @return IoResult Driver result code of type IoResult
 *
 * # Safety
 *
 * `puAdcValue_p` must be a valid pointer
 */
IoResult IoAdcGetValue(uint8_t uChannel_p, uint16_t *puAdcValue_p);
/**
 * @brief Setup an ADC channel for voltage or current measurement
 *
 * If a ADC does not support a specific mode or sensor type the error IoResult_NotImplemented
 * will be returned.
 *
 * @param uChannel_p The channel to setup
 * @param uMode_p The mode of type #IoAnalogMode
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoAdcSetMode(uint8_t uChannel_p,
                      IoAnalogMode uMode_p);
/**
 * @brief Set DAC output value
 *
 * @param uChannel_p The channel to set
 * @param uValue_p The value to set
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoDacSetValue(uint8_t uChannel_p, uint16_t uValue_p);
/**
 * @brief Set mode of a given temperature sensor
 *
 * If a sensor does not support a specific mode or sensor type the error IoResult_NotImplemented
 * will be returned.
 *
 * @param uChannel_p The temperature sensor channel
 * @param uMode_p The mode of type temperature sensor
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoTmpSetMode(uint8_t uChannel_p,
                      IoTmpMode uMode_p,
                      IoTmpSensorType uType_p);
/**
 * @brief Get the value of a temperature sensor
 *
 * @param uChannel_p The temperature sensor channel
 * @param piValue_p Pointer to the value destination in 1/10000 °C
 * @return IoResult Driver result code of type IoResult
 *
 * # Safety
 *
 * `piValue_p` must be a valid pointer
 */
IoResult IoTmpGetValue(uint8_t uChannel_p, int32_t *piValue_p);
/**
 * @brief Enable/disable a counter channel
 *
 * @param uChannel_p The channel to control
 * @param fEnable_p Enable with true value, false will disable it
 * @return IoResult Driver result code of type IoResult
 */
IoResult IoCntEnable(uint8_t uChannel_p, IoBool fEnable_p);